tests/neg/i22575.check
-- Error: tests/neg/i22575.scala:11:21 ---------------------------------------------------------------------------------
11 |  requireConst(transp(nonTranspDouble)) // error
   |               ^^^^^^^^^^^^^^^^^^^^^^^
   |               expected a constant value but found: (x: Int) => (x * 2):(Int => Int).apply(2)
